src/style/layout/_navigation.sass
@import '../base/variables'

header,
footer
    nav
        box-shadow: 0 0 3px rgba(51, 51, 51, 0.46)
        position: absolute
        background-color: $nav-bg-color
        z-index: 10
        width: 100%
        height: $nav-bar-height
        display: flex
        flex-direction: row
        justify-content: space-between
        .flex-sides
            flex: 1 1 0
            width: 0
            min-width: max-content
        &.nav-photo
            .photo-page-header
                display: none
            @media (max-width: 1024px)
                .photo-page-header
                    display: block
                    margin-top: $nav-item-space
                    padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2) 0 0 0
                    position: absolute
                    text-align: center
                    color: #000
                    a
                        color: #000 !important
                        text-decoration: rgba(0, 0, 0, 0.4) underline
                        &:hover,
                        &:focus
                            background-color: inherit
                            text-decoration: #000 underline
                @media (orientation: landscape)
                    top: 0
                    width: calc(#{$nav-bar-height} + 2px)
                    flex-direction: column
                    height: 100vh
                    .photo-page-header
                        bottom: 0.3rem
                        left: calc(#{$nav-bar-height} + 4px) /* 4px to keep distance from the shadow on the nav bar */
                        width: calc(100vw - 2 * (#{$nav-bar-height} + 4px))
                        padding-bottom: 0.2rem
                @media (orientation: portrait)
                    .photo-page-header
                        top: $nav-bar-height
                        left: 0
                        width: 100vw
            .flex-sides
                @media (max-width: 1024px) and (orientation: landscape)
                    flex: inherit
                    min-width: inherit
        .flex-right
            text-align: right
        .long-item
            display: inherit
        .short-item
            display: none
        @media (max-width: 1024px)
            .long-item
                display: none !important
            .short-item
                display: inherit
        .nav-item
            margin: $nav-item-space
            padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2)
            display: inline-block
            font-size: $nav-font-size
            &.branding
                @media (max-width: 1024px)
                    /* padding and margin to minimum to avoid flex wrap */
                    padding: calc(#{$nav-item-space} * 2 * 1.25) 0 0 0
                    margin: 0
                    font-size: calc(#{$nav-font-size} / 1.25)
            align-items: center
            .icon
                filter: $filter-body-color
                height: $nav-icon-size
                vertical-align: calc(#{$nav-font-size} - #{$nav-icon-size} + 1.5px)
            &[tabindex='0']
                cursor: default
                transition: all 0.2s ease-in
                border-radius: 0 $border-radius-lg 0 $border-radius-lg
                &:focus
                    outline: 1px solid $nav-hover-bg-color
        .menu-item
            @media (max-width: 1024px) and (orientation: landscape)
                display: inline-block
                width: $nav-bar-height
        .album-pagination
            cursor: help
            text-align: center
            @media (max-width: 1024px) and (orientation: landscape)
                font-size: 0.9rem
                margin: 0
                padding: 0
            .separator
                display: inline-block
                margin-left: 0.3rem
                margin-right: 0.3rem
                @media (max-width: 1024px) and (orientation: landscape)
                    font-size: 0.7rem
                    display: block
        .photo-metadata-wrapper
            margin-left: 0
            @media (max-width: 1024px)
                margin-left: $nav-item-space
        a:not(.normal-a)
            text-decoration: none
            color: $body-color !important
            border-radius: 0 $border-radius-lg 0 $border-radius-lg
            &:hover,
            &:focus
                background-color: $nav-hover-bg-color

.tippy-box[data-theme~='dropdown-list']
    ul
        list-style: none
        li
            .menu-item
                font-size: 1rem
                padding: 5px 9px /* same as the tippy style */
                margin: 5px 0
                $mute-color: #6d6d6d
                border: 1px solid $mute-color
                /* no border radius due to artifacts in Brave */
                color: $mute-color
            a.menu-item
                color: #fff !important
                display: block
                text-decoration: none
                border: 1px solid $body-color
                &:hover,
                &:focus
                    background-color: $body-color
                    border: 1px solid #fff

header nav
    top: 0

footer nav
    bottom: 0
    &.nav-photo
        @media (max-width: 1024px) and (orientation: landscape)
            /* avoid scroll bar to appear */
            right: 2px

